Fixed all-formatting rule alignment

--- a/style.css
+++ b/style.css
@@ -6,18 +6,23 @@
 	src: url(HelveticaNeue.dfont);
 }
 
-/* Reset rule */
+/* Reset rule  
 * {
 	padding: 0px;
 	margin: 0px;
 }
 
+*/
+
 #Chart {
 	font-family: HelveticaNeueLight;
 	font-size: 12px;
 	color: #FFFFFF;
-	margin: 20px ;
+	margin: 20px;
+	padding: 0px;
 }
+
+
 
 a {
 	text-decoration: none;
@@ -35,7 +40,7 @@ a:hover {
 
 .Group {
 	padding-left: 30px;
-	padding-top: 10px;
+	padding-top: 0px;
 }
 
 .Competency, a {
@@ -46,7 +51,7 @@ a:hover {
 
 #Capstone {
 	background-color: rgb(226,30,46);
-	height: 40px;
+	height: 52px;
 	width: 400px;
 	float: left;
 }
@@ -64,7 +69,7 @@ a:hover {
 
 #SystemSkills {
 	background-color: rgb(215,78,98);
-	height: 120px;
+	height: 130px;
 	width: 400px;
 	float: left;
 	width: 325px;
@@ -78,7 +83,7 @@ a:hover {
 
 #InterpersonalSkills {
 	background-color: rgb(220,113,89);
-	height: 100px;
+	height: 110px;
 	width: 285px;
 	clear: both;
 	float: left;
@@ -92,7 +97,7 @@ a:hover {
 
 #Attitudes_Values {
 	background-color: rgb(113,200,186);
-	height: 60px;
+	height: 70px;
 	width: 240px;
 	clear: both;
 	float: left;
@@ -106,7 +111,7 @@ a:hover {
 
 #LeadershipBase {
 	background-color: rgb(82,184,164);
-	height: 60px;
+	height: 70px;
 	width: 210px;
 	clear:both;
 	float: left;
@@ -122,7 +127,7 @@ a:hover {
 
 #GlobalKnowledgeBase {
 	background-color: rgb(220,213,187);
-	height: 50px;
+	height: 60px;
 	width: 175px;
 	clear:both;
 	float: left;
